turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:3: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to (Int, Int)
    forward(80); right(50,5)
                 ^